+2 страница > Аккордеон привет

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="start__ul">
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Платформа</a></li>
-                <li><a href="#">Курсы</a></li>
+                <li><a href="course.html">Курсы</a></li>
                 <li><a href="#">Лекции</a></li>
                 <li><a href="#">Тарифы</a></li>
                 <li><a href="#">Блог</a></li>
@@ -173,8 +173,8 @@
             <div class="footer">
                 <div class="footer__left">
                     <img src="images/logo-footer.svg" alt="" width="170px">
-                    <h4>Образовательная онлайн-платформа для развития и тренировки навыков
-                        в сфере информационных технологий</h4>
+                    <h3>Образовательная онлайн-платформа для развития и тренировки навыков
+                        в сфере информационных технологий</h3>
                     <ul>
                         <li><img src="images/social/facebook-footer.svg" alt=""></li>
                         <li><img src="images/social/vk-footer.svg" alt=""></li>
@@ -210,10 +210,10 @@
                 </div>
             </div>
             <div class="footer2">
-                <h4>E-Mentor © 2021 Все права защищены</h4>
+                <h3>E-Mentor © 2021 Все права защищены</h3>
                 <span>
-                    <h4>Политика обработки персональных данных</h4>
-                    <h4>Публичная оферта</h4>
+                    <h3>Политика обработки персональных данных</h3>
+                    <h3>Публичная оферта</h3>
                 </spa>
             </div>
         </div>
