--- a/course.html
+++ b/course.html
@@ -17,13 +17,13 @@
             <div class="header__top">
                 <img src="images/logo-footer.svg" alt="" width="128px">
                 <ul class="start__ul white">
-                    <li><a href="#">О нас</a></li>
-                    <li><a href="#">Платформа</a></li>
-                    <li><a href="#">Курсы</a></li>
-                    <li><a href="#">Лекции</a></li>
-                    <li><a href="#">Тарифы</a></li>
-                    <li><a href="#">Блог</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="index.html">О нас</a></li>
+                    <li><a href="index.html">Платформа</a></li>
+                    <li><a href="index.html">Курсы</a></li>
+                    <li><a href="index.html">Лекции</a></li>
+                    <li><a href="index.html">Тарифы</a></li>
+                    <li><a href="index.html">Блог</a></li>
+                    <li><a href="index.html">Контакты</a></li>
                 </ul>
             </div>
             <ul class="breadcrumb">
