--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header>
     <div class="wrapper">
             <ul class="start__ul">
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Платформа</a></li>
+                <li><a href="course.html">О нас</a></li>
+                <li><a href="course.html">Платформа</a></li>
                 <li><a href="course.html">Курсы</a></li>
-                <li><a href="#">Лекции</a></li>
-                <li><a href="#">Тарифы</a></li>
-                <li><a href="#">Блог</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="course.html">Лекции</a></li>
+                <li><a href="course.html">Тарифы</a></li>
+                <li><a href="course.html">Блог</a></li>
+                <li><a href="course.html">Контакты</a></li>
             </ul>
             <div class="header__body">
                 <div class="left">
