--- a/course.html
+++ b/course.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
             <ul class="breadcrumb">
-                <li><a href="#">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Курсы</a></li>
                 <li><a href="#">Motion design</a></li>
             </ul>
