Добавил адаптив главной страницы

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     </header>
 <!-- Учитесь у лучших -->
-    <section>
+    <section class="teach">
     <div class="wrapper">
         <div class="teachnumber">
             <div class="teachnumber__item">
@@ -106,7 +106,7 @@
     </div>
     </section>
 <!-- Выберите свой формат обучения -->
-    <section class="green">
+    <section class="green choose">
     <div class="wrapper">
         <div class="block2">
             <div class="block2-left">
