Адаптировал обе страницы

--- a/course.html
+++ b/course.html
@@ -73,14 +73,14 @@
     <section class="green">
         <div class="wrapper">
             <div class="block2">
-                <div class="block2-left">
+                <div class="block2-left2">
                     <h1>Актуальные знания</h1>
                     <h3>Мы понимаем, как быстро меняются тренды и появляются обновления. Поэтому мы всегда следим за
                         всеми новинками, добавляем в программу то, что требуют топовые компании. Мы предлагаем вам
                         только актуальные знания, чтобы вы были впереди планеты всей. </h3>
                     <a href="" class="btn_y">Купить курс</a>
                 </div>
-                <div class="block2__right">
+                <div class="block2__right2">
                     <img src="images/course-page/actual-photo.png" alt="">
                 </div>
             </div>
